k8s/apps/cep/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cep-api
  name: cep-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cep-api
  strategy: {}
  template:
    metadata:
      labels:
        app: cep-api
    spec:
      containers:
        - image: kenesparta/cep-api:latest
          name: cep-api
          ports:
            - containerPort: 8080
          resources: {}
