k8s/apps/cep/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cep-api
  name: cep-api
spec:
  ports:
    - port: 8080
      name: tcp
      protocol: TCP
      targetPort: 8080
  selector:
    app: cep-api
